<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/errorMessage"
            style="@style/LabelTextStyle"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/section_margin"
            android:textAlignment="center"
            tools:text="Проверьте подключение к интернету" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_margin">

            <TextView
                android:id="@+id/name"
                style="@style/TitleTextStyle"
                android:layout_marginBottom="@dimen/title_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="The Lord of the Rings: The Fellowship of the Ring" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <TextView
                android:id="@+id/ratingLabel"
                style="@style/LabelTextStyle"
                android:layout_marginTop="@dimen/line_margin"
                android:text="@string/rating"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <TextView
                android:id="@+id/ratingValue"
                style="@style/ValueTextStyle"
                app:layout_constraintLeft_toLeftOf="@id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/ratingLabel"
                tools:text="8.8" />

            <TextView
                android:id="@+id/yearLabel"
                style="@style/LabelTextStyle"
                android:layout_marginTop="@dimen/line_margin"
                android:text="@string/year"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingValue" />

            <TextView
                android:id="@+id/yearValue"
                style="@style/ValueTextStyle"
                app:layout_constraintLeft_toLeftOf="@id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/yearLabel"
                tools:text="2001" />

            <TextView
                android:id="@+id/countryLabel"
                style="@style/LabelTextStyle"
                android:layout_marginTop="@dimen/line_margin"
                android:text="@string/country"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/yearValue" />

            <TextView
                android:id="@+id/countryValue"
                style="@style/ValueTextStyle"
                app:layout_constraintLeft_toLeftOf="@id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/countryLabel"
                tools:text="New Zealand, USA" />

            <TextView
                android:id="@+id/genreLabel"
                style="@style/LabelTextStyle"
                android:layout_marginTop="@dimen/line_margin"
                android:text="@string/genre"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countryValue" />

            <TextView
                android:id="@+id/genreValue"
                style="@style/ValueTextStyle"
                app:layout_constraintLeft_toLeftOf="@id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/genreLabel"
                tools:text="Action, Adventure, Drama" />

            <TextView
                android:id="@+id/directorLabel"
                style="@style/LabelTextStyle"
                android:layout_marginTop="@dimen/line_margin"
                android:text="@string/director"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genreValue" />

            <TextView
                android:id="@+id/directorValue"
                style="@style/ValueTextStyle"
                app:layout_constraintLeft_toLeftOf="@id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/directorLabel"
                tools:text="Peter Jackson" />

            <TextView
                android:id="@+id/writerLabel"
                style="@style/LabelTextStyle"
                android:layout_marginTop="@dimen/line_margin"
                android:text="@string/writer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/directorValue" />

            <TextView
                android:id="@+id/writerValue"
                style="@style/ValueTextStyle"
                app:layout_constraintLeft_toLeftOf="@id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/writerLabel"
                tools:text="J.R.R. Tolkien, Frah Walsh, Philippa Boyens" />

            <TextView
                android:id="@+id/castLabel"
                style="@style/LabelTextStyle"
                android:layout_marginTop="@dimen/line_margin"
                android:text="@string/cast"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/writerValue" />

            <TextView
                android:id="@+id/castValue"
                style="@style/ValueTextStyle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/castLabel"
                tools:text="Elijah Woold, Ian McKellen, Orlando Bloom" />

            <TextView
                android:id="@+id/plotTitle"
                style="@style/TitleTextStyle"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginBottom="@dimen/title_margin"
                android:text="@string/plot"
                android:textSize="@dimen/subtitle_text_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/castValue" />

            <TextView
                android:id="@+id/plot"
                style="@style/ValueTextStyle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/plotTitle"
                tools:text="A meek Hobbit from the Shire and eight companions set out on a journey to destroy the powerful One Ring and save Middle-earth from the Dark Lord Sauron." />

            <Button
                android:id="@+id/showCastButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Show cast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/plot" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</ScrollView>